tests/valid/switch/01_ok_int.cps
let x: integer = 2;
switch (x) {
  case 1: { }
  case 2: { }
  default: { }
}
