tests/invalid/switch/01_incompatible_case.cps
let x: integer = 0;
switch (x) {
  case "hola": { }   // string vs integer error //E060
}
